k8s/local-dev/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: backend
  name: backend
spec:
  selector:
    name: backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
