k8s/local-dev/keycloak-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: keycloak-db
  name: keycloak-db
spec:
  replicas: 1
  selector:
    matchLabels:
      name: keycloak-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        name: keycloak-db
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: keycloakdb
            - name: POSTGRES_PASSWORD
              value: password
            - name: POSTGRES_USER
              value: admin
          image: 'postgres:13.1'
          name: keycloak-db
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: keycloak-pgdata
      restartPolicy: Always
      volumes:
        - name: keycloak-pgdata
          persistentVolumeClaim:
            claimName: keycloak-pgdata
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: keycloak-db
  name: keycloak-db
spec:
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    name: keycloak-db
