k8s/local-dev/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: keycloak
  name: keycloak
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    name: keycloak
