k8s/local-dev/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: postgres
  name: postgres
spec:
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    name: postgres
