k8s/local-dev/thingoo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thingoo-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend
                port:
                  number: 8080
          - path: /auth
            pathType: ImplementationSpecific
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
